buildscript {
	ext {
		queryDslVersion = "5.1.0"
		springDocVersion = "3.0.2"
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'com.toyproject'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'


	// Swagger
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"

	// DB - PostgreSQL
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'

	// redis & Spring Cache 추상화 지원 & Caffeine
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor(
			'org.projectlombok:lombok',
			"org.springframework.boot:spring-boot-configuration-processor"
	)

	// queryDsl
	implementation"com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
	annotationProcessor(
			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta",
			"jakarta.persistence:jakarta.persistence-api",
			"jakarta.annotation:jakarta.annotation-api",
	)

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Redis & 테스트용 가상 Redis
	testImplementation 'org.springframework.boot:spring-boot-starter-data-redis'
//	testImplementation 'it.ozimov:embedded-redis:0.7.2'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'


}

// QClass 생성 위치 지정
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile).configureEach {
	// 인코딩 설정 (한글 깨짐 방지)
	options.encoding = 'UTF-8'
	// QClass 생성 경로 지정
	options.getGeneratedSourceOutputDirectory().set(querydslDir)
}

clean {
	delete querydslDir
}

test {
	jvmArgs("-XX:+EnableDynamicAgentLoading")
	useJUnitPlatform() // JUnit 5(및 이후 버전) 실행을 위해 필수
}
